--- a/style.css
+++ b/style.css
@@ -155,3 +155,44 @@ h1 {
   margin-left: -10%;
   margin-top: 30px;
 }
+form {
+  text-align: center;
+  margin-top: 40px;
+}
+form > div {
+  margin: 40px auto;
+}
+input#nom {
+  width: 190px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid chocolate;
+}
+input[type="radio"]{
+  position: relative;
+  top: -2px;
+  left: 8px;
+}
+label[for="yes"],
+label[for="noo"] {
+  background: #CDDC39;
+  padding: 10px 10px 10px 30px;
+  margin-left: -20px;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+label {
+  cursor: pointer;
+}
+input[type="submit"]{
+  background: chocolate;
+  padding: 10px 30px 12px;
+  color: white;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+input[type="submit"]:hover{
+  background: coral;
+}
