--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ body {
   font-family: 'helvetica';
   font-size: 16px;
   background: #c5f1f3;
+  color: #5c6b7e;
 }
 
 div.videocontainer {
@@ -141,13 +142,16 @@ div.content {
   box-shadow: 8px 8px 0 rgba(0,0,0,.1);
 }
 .content p {
+  margin-top: 30px;
   margin-bottom: 20px;
+  line-height: 1.5rem;
 }
 h1 {
-  font-size: 2rem;
+  font-size: 2.4rem;
   font-weight: 100;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
+  color: chocolate;
 }
 .gmapp {
   width: 120%;
@@ -156,7 +160,6 @@ h1 {
   margin-top: 30px;
 }
 form {
-  text-align: center;
   margin-top: 40px;
 }
 form > div {
@@ -171,15 +174,16 @@ input#nom {
 input[type="radio"]{
   position: relative;
   top: -2px;
-  left: 8px;
+  left: 15px;
 }
 label[for="yes"],
 label[for="noo"] {
   background: #CDDC39;
-  padding: 10px 10px 10px 30px;
+  padding: 10px 20px 10px 40px;
   margin-left: -20px;
   border-radius: 5px;
   margin-right: 10px;
+  color: #222;
 }
 label {
   cursor: pointer;
@@ -195,4 +199,11 @@ input[type="submit"]{
 }
 input[type="submit"]:hover{
   background: coral;
+}
+h2,h3 {
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 100;
+  margin: 10px auto;
+  color: cornflowerblue;
 }
