--- a/style.css
+++ b/style.css
@@ -147,11 +147,14 @@ div.content {
   line-height: 1.5rem;
 }
 h1 {
-  font-size: 2.4rem;
-  font-weight: 100;
+  font-family: 'Baloo Bhaina', cursive;
+  font-size: 4.5rem;
   text-align: center;
   margin-bottom: 20px;
   color: chocolate;
+  text-shadow: -5px -5px 0 white;
+  margin-top: -60px;
+  line-height: 4rem;
 }
 .gmapp {
   width: 120%;
@@ -164,6 +167,9 @@ form {
 }
 form > div {
   margin: 40px auto;
+}
+strong {
+  color: chocolate;
 }
 input#nom {
   width: 190px;
@@ -196,6 +202,8 @@ input[type="submit"]{
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin: auto;
+  display: block;
 }
 input[type="submit"]:hover{
   background: coral;
