--- a/style.css
+++ b/style.css
@@ -119,6 +119,8 @@ div.videocontainer {
   width: 100%;
   max-width: 1000px;
   position: relative;
+  background: url(loaderanim.svg) no-repeat center 30%;
+  background-size: 100px;
 }
 div.videocontainer:after {
   top: 0px;
