--- a/style.css
+++ b/style.css
@@ -105,7 +105,10 @@ select:-moz-focusring {
   color: transparent !important;
   text-shadow: 0 0 0 #000;
 }
-
+body, html {
+  width: 100%;
+  height: 100%;
+}
 body {
   font-family: 'helvetica';
   font-size: 16px;
@@ -216,4 +219,18 @@ h2,h3 {
   font-weight: 100;
   margin: 10px auto;
   color: cornflowerblue;
+}
+
+/*PAPER JS*/
+.paperjselements {
+  display: none;
+}
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
 }
